| Summary: | ASTERISK-21009: xmpp_pubsub_unsubscribe: Could not create IQ when creating pubsub unsubscription on client | ||
| Reporter: | Marcello Ceschia (marcelloceschia) | Labels: | |
| Date Opened: | 2013-01-29 07:43:41.000-0600 | Date Closed: | 2017-03-30 15:21:51 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_xmpp |
| Versions: | 11.2.1 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | linux x64 | Attachments: | ( 0) xmpp_pubsub_unsubscribe.txt ( 1) xmpp.conf |
| Description: | during module unload res_xmpp.so I always get this warnings:
{noformat} *CLI> module unload res_xmpp.so -- Message technology handler 'xmpp' unregistered. == Unregistered application 'JabberSend' == Unregistered application 'JabberSendGroup' == Unregistered application 'JabberStatus' == Unregistered application 'JabberJoin' == Unregistered application 'JabberLeave' == Manager unregistered action JabberSend == Unregistered custom function JABBER_STATUS == Unregistered custom function JABBER_RECEIVE res_xmpp.c line 895 (xmpp_pubsub_iq_create): Error obtaining read lock: Resource deadlock avoided [Jan 29 14:38:08] ERROR[13437]: res_xmpp.c:1246 xmpp_pubsub_unsubscribe: Could not create IQ when creating pubsub unsubscription on client 'asterisk02' res_xmpp.c line 895 (xmpp_pubsub_iq_create): Error obtaining read lock: Resource deadlock avoided [Jan 29 14:38:08] ERROR[13437]: res_xmpp.c:1246 xmpp_pubsub_unsubscribe: Could not create IQ when creating pubsub unsubscription on client 'asterisk02' Unloaded res_xmpp.so {noformat} | ||
| Comments: | By: Rusty Newton (rnewton) 2013-02-05 11:09:51.188-0600 I can't reproduce this without seeing your configuration. Can you provide (attach as a file to the issue) your sanitized xmpp.conf ? Can you also verify whether you had DEBUG messages enabled on the console and set to 5 or above? If not, please attach an Asterisk log with VERBOSE and DEBUG at level 5 or above demonstrating the same issue. (there may be other messages occurring around those ERRORs that we are not seeing.) By: Marcello Ceschia (marcelloceschia) 2013-02-07 05:33:06.799-0600 I attached the requested debug log By: Rusty Newton (rnewton) 2013-02-14 19:05:31.433-0600 Thank you for the log, however I didn't find any good clues there. I've still been unable to reproduce those particular ERRORs. Please provide sanitized xmpp.conf,motif.conf if used, and any other relevant configs. By: Marcello Ceschia (marcelloceschia) 2013-02-15 05:56:29.090-0600 reproduce is quite easy, use xmpp for distributed device states, transmit some devicestate messages and do module unload res_xmpp.so By: Marcello Ceschia (marcelloceschia) 2013-02-15 06:10:09.332-0600 the reason why we get this error, cfg in xmpp_pubsub_iq_create is null debug: [Feb 15 13:07:05] ERROR[30549]: res_xmpp.c:899 xmpp_pubsub_iq_create: cfg '(nil)' [Feb 15 13:07:05] ERROR[30549]: res_xmpp.c:900 xmpp_pubsub_iq_create: cfg->global '(nil)' By: Rusty Newton (rnewton) 2013-02-22 19:38:28.927-0600 I am able to reproduce these errors with Asterisk 11 SVN r381835, when setup with a config very similar to yours, except I'm connected to an OpenFire server. By: Friendly Automation (friendly-automation) 2017-03-30 15:21:52.428-0500 Change 5363 merged by Joshua Colp: astobj2: Prevent potential deadlocks with ao2_global_obj_release [https://gerrit.asterisk.org/5363|https://gerrit.asterisk.org/5363] By: Friendly Automation (friendly-automation) 2017-03-30 17:03:45.034-0500 Change 5361 merged by zuul: astobj2: Prevent potential deadlocks with ao2_global_obj_release [https://gerrit.asterisk.org/5361|https://gerrit.asterisk.org/5361] By: Friendly Automation (friendly-automation) 2017-03-30 17:03:47.750-0500 Change 5362 merged by zuul: astobj2: Prevent potential deadlocks with ao2_global_obj_release [https://gerrit.asterisk.org/5362|https://gerrit.asterisk.org/5362] | ||